# sim800n-MadeEasyOnPosix

./: CMakeLists.txt  Makefile  README.md  build.sh  cc800.hex  gen.sh  lcdpainter.cpp  lcdpainter.h  main.cpp  mapper.h  memhub.v  memhub_sim.v  spdc1016.v  spld_pump.v
not_used/: mapper.cpp
obj_dir/: Vspdc1016.cpp  Vspdc1016.h  Vspdc1016__ConstPool_0.cpp  Vspdc1016__ConstPool_1.cpp  Vspdc1016__ConstPool_2.cpp  Vspdc1016__Slow.cpp  Vspdc1016__Syms.cpp  Vspdc1016__Syms.h  Vspdc1016___024root.h  Vspdc1016___024root__DepSet_h5354c9b8__0.cpp  Vspdc1016___024root__DepSet_h5354c9b8__0__Slow.cpp  Vspdc1016___024root__DepSet_ha3f072fc__0.cpp  Vspdc1016___024root__DepSet_ha3f072fc__0__Slow.cpp  Vspdc1016___024root__Slow.cpp  Vspdc1016__pch.h
verilator/include/: verilated_config.h
